k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spark-production
  labels:
    name: spark-production
    environment: production
